--- a/MarketSummaryConsole/MarketSummaryConsole.csproj
+++ b/MarketSummaryConsole/MarketSummaryConsole.csproj
@@ -156,7 +156,9 @@
     <Compile Include="Data Access\SQLRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
