--- a/MarketSummaryConsole/App.config
+++ b/MarketSummaryConsole/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -9,7 +13,11 @@
     <add key="database" value="ProspectSummary" />
     <add key="collection" value="ProspectData" />
     <add key="Searchcollection" value="ProspectDataSearchCriteria" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="congnitiveaccessKey" value="0f77b6255ee5492294e06f2f2afbacb8" />
+    <add key="bingsearchuri" value="https://api.cognitive.microsoft.com/bing/v7.0/search" />
+    <add key="bingurlcount" value="20" />
+    <add key="bingsearchageofdata" value="3" /> <!--in months-->
+    <add key="dbtype" value="AZURESQL" />    
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -47,4 +55,14 @@
       </providers>
     </roleManager>
   </system.web>
-</configuration>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+<connectionStrings><add name="ProspectDBContext" connectionString="metadata=res://*/Model.ProspectDataModel.csdl|res://*/Model.ProspectDataModel.ssdl|res://*/Model.ProspectDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=masteksql.database.windows.net;initial catalog=ProspectData;user id=yashpal;password=Welcome498$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
