--- a/MarketSummaryConsole/packages.config
+++ b/MarketSummaryConsole/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
@@ -57,6 +59,7 @@
   <package id="System.Threading" version="4.0.11" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
 </packages>
