--- a/MarketSummaryConsole/App.config
+++ b/MarketSummaryConsole/App.config
@@ -65,4 +65,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ProspectDBContext" connectionString="metadata=res://*/Model.ProspectDataModel.csdl|res://*/Model.ProspectDataModel.ssdl|res://*/Model.ProspectDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=masteksql.database.windows.net;initial catalog=ProspectData;user id=yashpal;password=Welcome498$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ProspectDBContext" connectionString="" /></connectionStrings></configuration>
