--- a/MarketSummaryConsole/App.config
+++ b/MarketSummaryConsole/App.config
@@ -17,7 +17,8 @@
     <add key="bingsearchuri" value="https://api.cognitive.microsoft.com/bing/v7.0/search" />
     <add key="bingurlcount" value="20" />
     <add key="bingsearchageofdata" value="3" /> <!--in months-->
-    <add key="dbtype" value="AZURESQL" />    
+    <add key="dbtype" value="AZURESQL" /> <!--for Azure SQL - AZURESQL, Table Storage -TABLESTORAGE, Cosmos -COSMOSDB-->
+    <add key="tableStorageConnection" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -35,7 +36,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -65,4 +66,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ProspectDBContext" connectionString="" /></connectionStrings></configuration>
+<connectionStrings><add name="ProspectDBContext" connectionString="" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
