--- a/MarketSummaryConsole/packages.config
+++ b/MarketSummaryConsole/packages.config
@@ -3,10 +3,11 @@
   <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
@@ -62,4 +63,5 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.3.1" targetFramework="net461" />
 </packages>
